--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             PROJECT 1 
            </div>
            <div class="verticaldes">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut minus distinctio et nisi a corporis nemo repudiandae, porro illum architecto earum sunt, temporibus enim quasi magni nobis veniam facere?
+            <a href="https://lipsadora0901.github.io/portfolio/">Portfolio</a>
            </div>
 
         </div>
@@ -60,7 +60,7 @@
             PROJECT 2
            </div>
            <div class="verticaldes">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut minus distinctio et nisi a corporis nemo repudiandae, porro illum architecto earum sunt, temporibus enim quasi magni nobis veniam facere?
+            <a href="https://lipsadora0901.github.io/Spotify_clone/">Spotify Clone</a>
            </div>
 
         </div>
@@ -71,7 +71,7 @@
             PROJECT 3 
            </div>
            <div class="verticaldes">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut minus distinctio et nisi a corporis nemo repudiandae, porro illum architecto earum sunt, temporibus enim quasi magni nobis veniam facere?
+             <a href="https://lipsadora0901.github.io/Taco_shop/">Taco Shop</a>
            </div>
 
         </div>
@@ -82,7 +82,7 @@
             PROJECT 4 
            </div>
            <div class="verticaldes">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum ut minus distinctio et nisi a corporis nemo repudiandae, porro illum architecto earum sunt, temporibus enim quasi magni nobis veniam facere?
+             <a href="https://lipsadora0901.github.io/Odisha_Tourism_App/">Odisha Tourism App</a>
            </div>
 
         </div>
