--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <section>I'm an Undergraduate Student at <span class="bold">NIT Rourkela</span>  </section>
                 <span id="element"></span>
                 <div class="buttons">
-                    <buttom class="btn">Visit Git hub</buttom>
-                    <buttom class="btn">Visit linkedin</buttom>
+                    <buttom class="btn"><a href="https://github.com/Lipsadora0901">Visit GitHub</a></buttom>
+                    <buttom class="btn"><a href="/">Visit linkedin</a></buttom>
                 </div>
 
             </section>
