--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <span id="element"></span>
                 <div class="buttons">
                     <buttom class="btn"><a href="https://github.com/Lipsadora0901">Visit GitHub</a></buttom>
-                    <buttom class="btn"><a href="/">Visit linkedin</a></buttom>
+                    <buttom class="btn"><a href="https://www.linkedin.com/in/lipsa-dora-25681225b/">Visit linkedin</a></buttom>
                 </div>
 
             </section>
