--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="images/hero.png" alt="" width="250" height="480">
+                    <img src="images/hero.jpeg" alt="" width="250" height="480">
                 </div>
             </div>
             <div class="right-header">
